--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SWE1 High Card",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified'&& exit 1"
   },
   "repository": {
     "type": "git",
